--- a/azure-pipeline2.yml
+++ b/azure-pipeline2.yml
@@ -1,6 +1,6 @@
 
 variables:
-- template: variables.yml@templates
+- template: variables.yml
 - if [ apptype: 'angular' ];
     node_version: '16.x'
     npm_config_cache: $(Pipeline.Workspace)/.npm
