--- a/azure-pipeline2.yml
+++ b/azure-pipeline2.yml
@@ -1,11 +1,8 @@
 
 variables:
 - template: variables.yml
-- if [ apptype: 'angular' ];
-    node_version: '16.x'
-    npm_config_cache: $(Pipeline.Workspace)/.npm
-    is_main: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
-    generate_source_maps: $[lower(variables['is_main'])] # script step requires lowercase boolean, see https://stackoverflow.com/q/71729210/419956
+- if ${{ variables.apptype }};
+
 - if [ apptype: 'dotnet' ];
     solution: '**/*.sln'
     buildPlatform: 'Any CPU'
