--- a/variables.yml
+++ b/variables.yml
@@ -1,2 +1,6 @@
 variables:
   apptype: 'angular'
+  node_version: '16.x'
+  npm_config_cache: $(Pipeline.Workspace)/.npm
+  is_main: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
+  generate_source_maps: $[lower(variables['is_main'])] # script step requires lowercase boolean, see https://stackoverflow.com/q/71729210/419956
