--- a/azure-pipeline2.yml
+++ b/azure-pipeline2.yml
@@ -11,8 +11,8 @@ trigger:
         
 
 pool:
-    - if: 'apptype: angular'
-      when: vmImage: 'ubuntu-latest'
+    - if [[ apptype: 'angular' ]]; then
+        vmImage: 'ubuntu-latest'
 
   
    
