--- a/azure-pipeline2.yml
+++ b/azure-pipeline2.yml
@@ -82,7 +82,7 @@ stages:
         displayName: 'Publish Angular application'
         artifact: AngularApp
         
-    - if [[ apptype: angular ]]; then
+    - if [[ apptype: angular' ]]; then
     - job: Build   
       steps:
       - task: NuGetToolInstaller@1
