--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,85 +1,87 @@
+
 variables:
     - template: variables.yml
 
 trigger:
-  - master
-       
+    - master
+
+        
 pool:
--if [[ apptype: angular ]]; then
- vmImage: 'ubuntu-latest'
--if [[ apptype: dotnet ]]; then
- vmImage: 'windows-latest' 
+- if [[ apptype: angular ]]; then
+    vmImage: 'ubuntu-latest'
+- if [[ apptype: dotnet ]]; then
+    vmImage: 'windows-latest' 
   
    
 stages:
   - stage: build
     displayName: Build
     jobs:
-    - if [[ apptype: angular ]]; then
     - job: Build
-      steps:
+        - if [[ apptype: angular ]]; then
+        steps:
         - task: NodeTool@0
-          displayName: 'Node installation'
-          inputs:
-            versionSpec: $(node_version)
+            displayName: 'Node installation'
+            inputs:
+                versionSpec: $(node_version)
 
         - pwsh: Get-ChildItem -Path Env:\
-          displayName: 'Show environment variables'
-          condition: false # Disabled by default
+            displayName: 'Show environment variables'
+            condition: false # Disabled by default
 
         - task: Cache@2
-          displayName: 'NPM Cache'
-          inputs:
-            key: 'npm | "$(Agent.OS)" | "$(node_version)" | package-lock.json'
-            path: $(npm_config_cache)
+            displayName: 'NPM Cache'
+            inputs:
+                key: 'npm | "$(Agent.OS)" | "$(node_version)" | package-lock.json'
+                path: $(npm_config_cache)
 
         - script: npm cache verify
-          displayName: 'NPM Cache verification'
+            displayName: 'NPM Cache verification'
 
         - script: npm ci
-          displayName: 'NPM CI'
+            displayName: 'NPM CI'
 
         - script: npm run lint
-          displayName: 'Angular linting'
+            displayName: 'Angular linting'
 
         - script: npm run test -- --no-watch --reporters="progress,junit" --code-coverage
-          displayName: 'Angular test run'
+            displayName: 'Angular test run'
 
         - task: PublishTestResults@2
-          displayName: 'Angular test result publication'
-          inputs:
-            testResultsFiles: 'TESTS-*.xml'
+            displayName: 'Angular test result publication'
+            inputs:
+                testResultsFiles: 'TESTS-*.xml'
 
         - task: PublishCodeCoverageResults@1
-          displayName: 'Angular test coverage publication'
-          inputs:
-            codeCoverageTool: 'Cobertura'
-            summaryFileLocation: '$(Build.SourcesDirectory)/coverage/**/cobertura-coverage.xml'
+            displayName: 'Angular test coverage publication'
+            inputs:
+                codeCoverageTool: 'Cobertura'
+                summaryFileLocation: '$(Build.SourcesDirectory)/coverage/**/cobertura-coverage.xml'
 
         - script: npm run build -- --source-map=$(generate_source_maps)
-          displayName: 'Angular build'
+            displayName: 'Angular build'
 
         - publish: '$(Build.SourcesDirectory)/dist/foo'
-          displayName: 'Publish Angular application'
-          artifact: AngularApp
-        
-    - if [[ apptype: angular' ]]; then
-    - job: Build   
-      steps:
+            displayName: 'Publish Angular application'
+            artifact: AngularApp
+
+            
+        - if [[ apptype: 'dotnet' ]];    
+        steps:
         - task: NuGetToolInstaller@1
 
         - task: NuGetCommand@2
-          inputs:
-            restoreSolution: '$(solution)'
+            inputs:
+                restoreSolution: '$(solution)'
 
         - task: VSBuild@1
-          inputs:
-            solution: '$(solution)'
-            msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
-            platform: '$(buildPlatform)'
-            configuration: '$(buildConfiguration)'
+            inputs:
+                solution: '$(solution)'
+                msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
+                platform: '$(buildPlatform)'
+                configuration: '$(buildConfiguration)'
 
         - task: VSTest@2
-          inputs:
-            platform: '$(buildPlatform)'
-            configuration: '$(buildConfiguration)'
+            inputs:
+                platform: '$(buildPlatform)'
+                configuration: '$(buildConfiguration)'
