--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,9 +14,9 @@ pool:
   
    
 stages:
+  - if [[ apptype: angular ]]; then
   - stage: build
     displayName: Build
-    - if [[ apptype: angular ]]; then
     jobs:
     - job: Build
       steps:
@@ -66,7 +66,9 @@ stages:
           artifact: AngularApp
 
             
-    - if [[ apptype: angular ]]; then
+  - if [[ apptype: angular ]]; then
+  - stage: build
+    displayName: Build
     jobs:
     - job: Build  
       steps:
