--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 
         
 pool:
-- if [[ apptype: "angular ]]; then
+- if [[ apptype: angular ]]; then
   vmImage: 'ubuntu-latest'
 - if [[ apptype: dotnet ]]; then
   vmImage: 'windows-latest' 
