--- a/variables.yml
+++ b/variables.yml
@@ -1,5 +1,5 @@
 variables:
-  apptype: 'angular'
+  appType: 'angular'
   node_version: '16.x'
   npm_config_cache: $(Pipeline.Workspace)/.npm
   is_main: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
