--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ variables:
   - template: variablefile.yml
 
 
-- ${{ if eq(variablefile.yml.appType,'angular') }}:
+- ${{ if eq(variables.appType,'angular') }}:
   trigger:
     batch: true
     branches:
