--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ variables:
   - template: variables.yml
 
 - ${{ if eq(variables.appType,'angular') }}:
-    trigger:
+    - trigger:
       batch: true
       branches:
       include:
