--- a/variables.yml
+++ b/variables.yml
@@ -1,6 +1,6 @@
 variables:
   appType: "angular"
-  vmimage: "ubuntu-latest
+  vmimage: "ubuntu-latest"
   node_version: '16.x'
   npm_config_cache: $(Pipeline.Workspace)/.npm
   is_main: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
